--- a/Informatique spé/C07/cours.tex
+++ b/Informatique spé/C07/cours.tex
@@ -198,7 +198,7 @@
 \begin{definition}{7.26}{règle d'introduction du quantificateur universel}
     En déduction naturelle munie de la logique du premier ordre, pour un ensemble $\Gamma$ de formules, pour toute formule $A$~:
     $$\frac{\Gamma \these A(x)}{\Gamma \these \forall x.A(x)}(\mr{i}\forall)$$
-    valable si $x$ est non libre dans $A$ \ie si toutes les occurrences de $x$ dans $A$ sont liées.\\
+    valable si $x$ est non libre dans $\Gamma$ \ie si toutes les occurrences de $x$ dans toutes les formules de $\Gamma$ sont liées.\\
     telle est la \notion{règle d'introduction du quantificateur universel}.
 \end{definition}
 
